🐞 Fixed bug with horizontal scrolling

--- a/src/components/RestaurantCard/RestaurantCard.scss
+++ b/src/components/RestaurantCard/RestaurantCard.scss
@@ -15,8 +15,9 @@
     font: 400 20px "Open Sans", "Helvetica Neue", Sans-serif;
     font-weight: $bold;
   }
+  width: auto;
+  box-sizing: border-box;
 }
-
 .icon {
   display: inline-block;
   width: 1em;
