--- a/src/components/SearchResults/searchResults.scss
+++ b/src/components/SearchResults/searchResults.scss
@@ -1,19 +1,21 @@
 @import "~theme/variables.scss";
 
-.search {
-  background: $primary-color;
-
-  .label {
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-  .welcomemessage {
-    span {
+.results {
+  .heading {
+    h2 {
       font-size: 30px;
       font-weight: $bold;
+      margin-left: 10px;
     }
   }
 
-  font: 400 26px "Open Sans", "Helvetica Neue", Sans-serif;
   color: $accent-color;
+
+  height: 100vh;
+
+  .listing {
+    width: auto;
+    box-sizing: border-box;
+    margin-right: 20px;
+  }
 }
